--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "jest-image-snapshot": "^4.5.1",
-        "puppeteer": "^10.4.0",
+        "puppeteer": "^13.4.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^5.0.0",
         "typescript": "^4.1.2"
     },
     "scripts": {
@@ -41,6 +41,7 @@
         "@types/jest-image-snapshot": "^4.3.1",
         "@types/puppeteer": "^5.4.4",
         "husky": "^7.0.0",
+        "jest-watch-typeahead": "^0.6.5",
         "prettier": "^2.4.1",
         "pretty-quick": "^3.1.1"
     }
